--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,7 @@ html
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Lyft Node Starter Kit
+    link(rel="shortcut icon", href="/favicon.png")
     link(rel="stylesheet", href="/css/normalize.css")
     link(rel="stylesheet", href="/css/main.css")
 
