--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,34 @@
-html {font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;}
-body {color:#000000;font-size:14px;}
-#map {width:100%;height:512px;}
+html {
+  font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+body {
+  color: #000000;
+  font-size: 14px;
+}
+
+.container {
+  width: 320px;
+  height: auto;
+  margin: 0 auto;
+}
+
+#map {
+  width: 100%;
+  height: 320px;
+}
+
+#controls {
+  width: 100%;
+  background-color: #EEEEEE;
+}
+#controls ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 10px 0 20px 0;
+}
+#controls ul > li {
+  display: block;
+  padding-top: 10px;
+  text-align: right;
+}
