--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,16 @@ html
     link(rel="stylesheet", href="/css/main.css")
 
   body
-    div(id="map")
+    div(class="container")
+      div(id="map")
+      div(id="controls")
+        form(id="controlsForm", name="controlsForm")
+          ul
+            li
+              input(type="text", id="beginLocation", name="beginLocation", placeholder="Pick Up Location", title="Pick Up Location")
+            li
+              input(type="text", id="endLocation", name="endLocation", placeholder="Drop Off Location", title="Drop Off Location")
+            li
+              button(type="submit", title="Request Ride") Request Ride
     script(src="/js/main.js")
     script(async, defer, src="https://maps.googleapis.com/maps/api/js?callback=onGoogleMapsResponse&key="+GOOGLE_API_KEY)
