updates and stuff and things

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,9 +18,9 @@ html
         form(id="controlsForm", name="controlsForm")
           ul
             li
-              input(type="text", id="beginLocation", name="beginLocation", placeholder="Pick Up Location", title="Pick Up Location")
+              input(type="text", id="locationBegin", name="locationBegin", placeholder="Pick Up Location", title="Pick Up Location")
             li
-              input(type="text", id="endLocation", name="endLocation", placeholder="Drop Off Location", title="Drop Off Location")
+              input(type="text", id="locationEnd", name="locationEnd", placeholder="Drop Off Location", title="Drop Off Location")
             li
               button(type="submit", title="Request Ride") Request Ride
     script(src="/js/main.js")
