--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,16 @@ body {
 }
 #controls ul > li {
   display: block;
-  padding-top: 10px;
+  padding: 10px 10px 0 10px;
   text-align: right;
+}
+#controls ul > li > input[type="text"] {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  padding: 5px;
+}
+#controls ul > li > button {
+  display: inline-block;
+  padding: 10px;
 }
