--- a/views/index.pug
+++ b/views/index.pug
@@ -22,7 +22,7 @@ html
                 type="text",
                 id="locationBegin",
                 name="locationBegin",
-                onchange="javascript:app.onChangeLocationBegin.apply(this, arguments);",
+                onchange="javascript:app.onChangeLocationBeginElement.apply(this, arguments);",
                 placeholder="Pick Up Location",
                 title="Pick Up Location"
               )
@@ -31,7 +31,7 @@ html
                 type="text",
                 id="locationEnd",
                 name="locationEnd",
-                onchange="javascript:app.onChangeLocationEnd.apply(this, arguments);",
+                onchange="javascript:app.onChangeLocationEndElement.apply(this, arguments);",
                 placeholder="Drop Off Location",
                 title="Drop Off Location"
               )
