added simple ETA request system

--- a/views/index.pug
+++ b/views/index.pug
@@ -38,6 +38,7 @@ html
             li
               button(
                 type="button",
+                onclick="javascript:app.getLyftEta();",
                 title="Get ETA"
               ) Get ETA
               button(
