added application log

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,12 @@ html
   body
     div(class="container")
       div(id="map")
+      div(id="log")
+        h3 Log
+        form(id="logForm", name="logForm")
+          textarea(id="logTarget", name="logTarget", rows="5")
       div(id="controls")
+        h3 Controls
         form(id="controlsForm", name="controlsForm")
           ul
             li
