--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,31 +19,60 @@ body {
 
 #map {
   width: 100%;
-  height: 320px;
+  height: 256px;
+}
+
+#log {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 5px;
+  background-color: #CCCCCC;
+}
+#log > h3 {
+  margin: 0;
+  padding: 0;
+}
+#logTarget {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  margin: 5px 0 0 0;
+  padding: 0;
+  font-family: "Courier New", Courier, "Lucida Console", Monaco, monospace;
+  font-size: 12px;
+  font-weight: normal;
 }
 
 #controls {
+  box-sizing: border-box;
   width: 100%;
+  padding: 5px;
   background-color: #EEEEEE;
+}
+#controls > h3 {
+  margin: 0;
+  padding: 0;
 }
 #controls ul {
   list-style-type: none;
   margin: 0;
-  padding: 10px 0 20px 0;
+  padding: 0;
 }
 #controls ul > li {
   display: block;
-  padding: 10px 10px 0 10px;
+  margin: 5px 0 0 0;
+  padding: 0;
   text-align: right;
 }
 #controls ul > li > input[type="text"] {
   box-sizing: border-box;
   display: block;
   width: 100%;
+  margin: 0;
   padding: 5px;
 }
 #controls ul > li > button {
   display: inline-block;
-  margin: 0 5px;
+  margin: 0 0 0 5px;
   padding: 10px;
 }
