added basic profile request

--- a/views/index.pug
+++ b/views/index.pug
@@ -53,6 +53,11 @@ html
               ) Get ETA
               button(
                 type="button",
+                onclick="javascript:app.getApiLyftProfile();",
+                title="Get User Profile"
+              ) Get User Profile
+              button(
+                type="button",
                 onclick="javascript:app.getApiLyftRides();",
                 title="Get Ride History"
               ) Get Ride History
