--- a/views/index.pug
+++ b/views/index.pug
@@ -27,7 +27,7 @@ html
                 type="text",
                 id="locationBegin",
                 name="locationBegin",
-                onchange="javascript:app.onChangeLocationBeginElement.apply(this, arguments);",
+                onchange="javascript:window.MapComponent.onChangeLocationBeginElement.apply(this, arguments);",
                 placeholder="Pick Up Location",
                 title="Pick Up Location"
               )
@@ -36,7 +36,7 @@ html
                 type="text",
                 id="locationEnd",
                 name="locationEnd",
-                onchange="javascript:app.onChangeLocationEndElement.apply(this, arguments);",
+                onchange="javascript:window.MapComponent.onChangeLocationEndElement.apply(this, arguments);",
                 placeholder="Drop Off Location",
                 title="Drop Off Location"
               )
@@ -59,30 +59,32 @@ html
             li
               button(
                 type="button",
-                onclick="javascript:app.getApiLyftEta();",
+                onclick="javascript:window.AppComponent.getApiLyftEta(window.MapComponent.getLocationBegin().latitude, window.MapComponent.getLocationBegin().longitude);",
                 title="Get ETA"
               ) Get ETA
               button(
                 type="button",
-                onclick="javascript:app.getApiLyftProfile();",
+                onclick="javascript:window.AppComponent.getApiLyftProfile();",
                 title="Get User Profile"
               ) Get User Profile
               button(
                 type="button",
-                onclick="javascript:app.getApiLyftRides();",
+                onclick="javascript:window.AppComponent.getApiLyftRides();",
                 title="Get Ride History"
               ) Get Ride History
             li
               button(
                 type="button",
-                onclick="javascript:app.getApiStatus();",
+                onclick="javascript:window.AppComponent.getApiStatus();",
                 title="Get Local Server Status"
               ) Get Local Server Status
             li
               button(
                 type="button",
-                onclick="javascript:app.getApiLyftStatus();",
+                onclick="javascript:window.AppComponent.getApiLyftStatus();",
                 title="Get Remote Server Status"
               ) Get Remote Server Status
-    script(src="/js/main.js")
-    script(async, defer, src="https://maps.googleapis.com/maps/api/js?callback=app.onGoogleMapsResponse&key="+GOOGLE_API_KEY)
+    script(src="/js/LogComponent.js")
+    script(src="/js/MapComponent.js")
+    script(src="/js/AppComponent.js")
+    script(async, defer, src="https://maps.googleapis.com/maps/api/js?callback=window.MapComponent.onGoogleMapsResponse&key="+GOOGLE_API_KEY)
