added users api endpoint

--- a/views/index.pug
+++ b/views/index.pug
@@ -85,6 +85,12 @@ html
                 onclick="javascript:window.AppComponent.getApiLyftStatus();return false;",
                 title="Get Remote Server Status"
               ) Get Remote Server Status
+            li
+              button(
+                type="button",
+                onclick="javascript:window.AppComponent.getApiUsers();return false;",
+                title="Get User Details"
+              ) Get User Details
     script(src="/js/LogComponent.js")
     script(src="/js/MapComponent.js")
     script(src="/js/AppComponent.js")
