--- a/views/index.pug
+++ b/views/index.pug
@@ -18,9 +18,9 @@ html
         h3 Log
         form(id="logForm", name="logForm")
           textarea(id="logTarget", name="logTarget", rows="5")
-      div(id="controls")
-        h3 Controls
-        form(id="controlsForm", name="controlsForm")
+      div(id="locations")
+        h3 Locations
+        form(id="locationsForm", name="locationsForm")
           ul
             li
               input(
@@ -40,6 +40,10 @@ html
                 placeholder="Drop Off Location",
                 title="Drop Off Location"
               )
+      div(id="controls")
+        h3 Controls
+        form(id="controlsForm", name="controlsForm")
+          ul
             li
               button(
                 type="button",
