added ridetypes endpoint and LogComponent.clear()

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,6 +43,9 @@ button[type="button"] {
   margin: 0;
   padding: 0;
 }
+#log > h3 > a {
+  text-decoration: none;
+}
 #logTarget {
   box-sizing: border-box;
   display: block;
