--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,6 @@
 /*=================*/
 /* Document Styles */
 /*=================*/
-
 html {
   font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -21,18 +20,47 @@ button[type="button"] {
   margin: 0;
   padding: 10px;
 }
-
 .container {
   width: 320px;
   height: auto;
   margin: 0 auto;
 }
 
+/*=====*/
+/* Map */
+/*=====*/
 #map {
   width: 100%;
   height: 256px;
 }
 
+/*===========*/
+/* Locations */
+/*===========*/
+#locations {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 5px;
+  background-color: #CCCCCC;
+}
+#locations > h3 {
+  margin: 0;
+  padding: 0;
+}
+#locations > form {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+#locations > form > input[type="text"] {
+  display: block;
+  width: 100%;
+  margin: 5px 0;
+}
+
+/*=====*/
+/* Log */
+/*=====*/
 #log {
   box-sizing: border-box;
   width: 100%;
@@ -58,31 +86,30 @@ button[type="button"] {
   border: none;
 }
 
-#locations, #controls {
+/*==========*/
+/* Controls */
+/*==========*/
+#controls {
   box-sizing: border-box;
   width: 100%;
   padding: 5px;
   background-color: #CCCCCC;
 }
-#locations > h3, #controls > h3 {
+#controls > h3 {
   margin: 0;
   padding: 0;
 }
-form ul {
+#controls > form > ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-form ul > li {
+#controls > form > ul > li {
   display: block;
   margin: 0;
   padding: 0;
   text-align: right;
 }
-form ul > li > input[type="text"] {
-  width: 100%;
-  margin: 5px 0;
-}
-form ul > li > button[type="button"] {
+#controls > form > ul > li > button[type="button"] {
   margin: 5px;
 }
