--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
-/*=================*/
+/* =============== */
 /* Document Styles */
-/*=================*/
+/* =============== */
 html {
   font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -26,17 +26,17 @@ button[type="button"] {
   margin: 0 auto;
 }
 
-/*=====*/
+/* === */
 /* Map */
-/*=====*/
+/* === */
 #map {
   width: 100%;
   height: 256px;
 }
 
-/*===========*/
+/* ========= */
 /* Locations */
-/*===========*/
+/* ========= */
 #locations {
   box-sizing: border-box;
   width: 100%;
@@ -58,9 +58,9 @@ button[type="button"] {
   margin: 5px 0;
 }
 
-/*=====*/
+/* === */
 /* Log */
-/*=====*/
+/* === */
 #log {
   box-sizing: border-box;
   width: 100%;
@@ -86,9 +86,9 @@ button[type="button"] {
   border: none;
 }
 
-/*==========*/
+/* ======== */
 /* Controls */
-/*==========*/
+/* ======== */
 #controls {
   box-sizing: border-box;
   width: 100%;
